trustfall_core/test_data/tests/valid_queries/fold_count_prefixed_output_name.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Four {
        factor_: primeFactor @fold @transform(op: "count") @output {
            numbers: value @output
        }
    }
}"#,
    arguments: {},
)
