trustfall_core/test_data/tests/parse_errors/tag_on_fold.graphql.ron
TestGraphQLQuery (
    // This test ensures that an `@fold` after an `@tag` is a parse error.
    schema_name: "numbers",
    query: r#"
{
    Number(max: 5) {
        value @output

        primeFactor @fold @tag {
            value @output
        }
    }
}"#,
    arguments: {},
)
